style: fix event search and sbas date overlap

--- a/src/app/components/results-menu/scenes-list/pair/pair.component.scss
+++ b/src/app/components/results-menu/scenes-list/pair/pair.component.scss
@@ -4,6 +4,6 @@
   align-items: flex-start;
 }
 .date {
-  width: 32px;
+  width: 46px;
   text-align: right;
 }
